test/statements/bradc/loops/modifyIndices.good
modifyIndices.chpl:2: error: illegal lvalue in assignment