test/statements/bradc/loops/modifyIndices.chpl
for i in 1..10 {
  j += 1;
  writeln("i is: ", i);
}
